--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,13 +2,14 @@ doctype html
 html
     head
         link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
+        link(rel='stylesheet', href='css/style.css')
         title= title
     body
         div.row.justify-content-center
             div.col-md-6
                 div.card-body
                     block content
-    footer.row.justify-content-center
+    footer.row.justify-content-center.forma
         div.col-md-6
             block footer
-                div.col-md-12 © 2021 Refactory Cohort 0007, NodeJS.
+                div.col-md-12 © Kakooza Jerry Refactory Catalyst, NodeJS.
