--- a/views/login.pug
+++ b/views/login.pug
@@ -1,6 +1,6 @@
 extends layout
 block content
-    div.card.text-center
+    div.card.text-center.forma
         div.card-header
                 h4.card-title Log In 
         div.card-body
