Added the update and delete functionality

--- a/views/createEmployee.pug
+++ b/views/createEmployee.pug
@@ -28,13 +28,13 @@ block content
                 div
                     label.form-check.form-check-inline 
                         span.form-check-label accidents    &nbsp
-                        input.form-check-input(type="checkbox" checked name="pastincidence" value="accidents")
+                        input.form-check-input(type="checkbox" checked name="pastincidences" value="accidents")
                     label.form-check.form-check-inline 
                         span.form-check-label fights   &nbsp
-                        input.form-check-input(type="checkbox" checked name="pastincidence" value="fights")
+                        input.form-check-input(type="checkbox" checked name="pastincidences" value="fights")
                     label.form-check.form-check-inline 
                         span.form-check-label fuel thefts &nbsp
-                    input.form-check-input(type="checkbox" checked name="pastincidence" value="fuelthefts")
+                    input.form-check-input(type="checkbox" checked name="pastincidences" value="fuelthefts")
         div.form-row
             div.col.form-group
                 label Upload image
