--- a/views/registerFrontDesk.pug
+++ b/views/registerFrontDesk.pug
@@ -1,2 +1,24 @@
 extends layout
 block content
+    header.card-header
+        h4.card-title Register Front Desk Personel 
+    form(method="POST" action='/employee/registerfrontdesk')
+        div.form-row
+            div.col.form-group
+                label First name 
+                input.form-control(name="firstname")
+            div.col.form-group
+                label Last name
+                input.form-control(name="lastname")
+            div.col.form-group
+                label Email
+                input.form-control(name="email")
+        div.form-row
+            div.col.form-group
+                label Password 
+                input.form-control(name="password")
+        div.form-row
+            div.col.form-group
+                button.btn.btn-primary.btn-block Register Person
+    
+                
