--- a/views/login.pug
+++ b/views/login.pug
@@ -15,6 +15,6 @@ block content
                         input.form-control.form-control-sm(name="password")
                 div.form-row
                     div.col.form-group
-                        a(class='button btn btn-primary btn-block', href='/login') Login
+                        button.btn.btn-primary.btn-block Login
                     div.col.form-group
                         a(class='button btn btn-primary btn-block', href='/createEmployee') Register
