--- a/views/registerFrontDesk.pug
+++ b/views/registerFrontDesk.pug
@@ -16,9 +16,9 @@ block content
         div.form-row
             div.col.form-group
                 label Password 
-                input.form-control(name="password")
+                input.form-control(type="password" name="password")
         div.form-row
             div.col.form-group
-                button.btn.btn-primary.btn-block Register Person
+                button.btn.btn-primary.btn-block Register
     
                 
