--- a/views/createEmployee.pug
+++ b/views/createEmployee.pug
@@ -6,13 +6,13 @@ block content
         div.form-row
             div.col.form-group
                 label First name 
-                input.form-control(name="firstname")
+                input.form-control.formsinput(name="firstname")
             div.col.form-group
                 label Last name
-                input.form-control(name="lastname")
+                input.form-control.formsinput(name="lastname")
             div.col.form-group
                 label Email
-                input.form-control(name="email")
+                input.form-control.formsinput(name="email")
         div.form-row
             div.col.form-group
                 label Gender
@@ -41,11 +41,11 @@ block content
                 input(type='file', name='imageupload')
             div.col.form-group
                 label Role 
-                select.form-control(name="role")
+                select.form-control.formsinput(name="role")
                     option(value="driver")  Driver
                     option(value="conductor") Conductor
         div.form-row
             div.col.form-group
-                button.btn.btn-primary.btn-block Register Employee
+                button.btn.btn-primary.btn-block.formsinput Register Employee
     
                 
