--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,34 +2,36 @@ doctype html
 html
     head
         link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
-        link(rel='stylesheet', href='css/style.css')
+        link(rel='stylesheet', href='/css/style.css')
         title= title
-    nav.navbar.navbar-expand-lg.navbar-light.bg-light
-        a.navbar-brand(href='#') Stay Clean Bins
-        button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
-            span.navbar-toggler-icon
-        .collapse.navbar-collapse(id='navbarSupportedContent')
-            ul.navbar-nav.mr-auto
-                li.nav-item.active
-                    a.nav-link(href='#') Home
-                li.nav-item
-                    a.nav-link(href='/services') Services
-                li.nav-item
-                    a.nav-link(href='/about') About
-                li.nav-item
-                    a.nav-link(href='/employees') Employees
-                ul.navbar-nav.float-right
-                li.nav-item
-                    a.nav-link(href='/orders') Orders
-                li.nav-item.dropdown
-                    a.nav-link.dropdown-toggle(id='navbarDropdownMenuLink', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Account
-                    
+    nav.navbar.navbar-expand-lg.navbar-light.bg-light.forma.sticky-top
+        div.container
+            a.navbar-brand(href='#') Stay Clean Bins
+            button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
+                span.navbar-toggler-icon
+            .collapse.navbar-collapse(id='navbarSupportedContent')
+                ul.navbar-nav.mr-auto
+                    li.nav-item.active
+                        a.nav-link(href='#') Home
+                    li.nav-item
+                        a.nav-link(href='/services') Services
+                    li.nav-item
+                        a.nav-link(href='/about') About
+                    li.nav-item
+                        a.nav-link(href='/employees') Employees
+                    ul.navbar-nav.float-right
+                    li.nav-item
+                        a.nav-link(href='/orders') Orders
+                    li.nav-item.dropdown
+                        a.nav-link.dropdown-toggle(id='navbarDropdownMenuLink', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Account
+                form.form-inline.my-2.my-lg-0(method="post" action='/logout')  
+                    button.btn.btn-outline-success.my-2.my-sm-0.formsinput(type="Submit") Log Out
     body
-        div.row.justify-content-center
-            div.col-md-8
+        div.container
+            div.row.justify-content-center
                 div.card-body
                     block content
     footer.row.justify-content-center.forma
-        div.col-md-6
+        div.container
             block footer
                 div.col-md-12 © Kakooza Jerry Refactory Catalyst, NodeJS.
