--- a/views/login.pug
+++ b/views/login.pug
@@ -14,7 +14,7 @@ block content
                         div.form-row
                             div.col.form-group
                                 label Password
-                                input.form-control.form-control-sm.formsinput(name="password")
+                                input.form-control.form-control-sm.formsinput(type="password" name="password")
                         div.form-row
                             div.col.form-group
                                 button.btn.btn-primary.btn-block.formsinput Login
