Validation submit finally worked

--- a/views/login.pug
+++ b/views/login.pug
@@ -1,4 +1,4 @@
-extends layout
+extends layout2
 block content
     div.row.justify-content-center
         div.col-md-6
@@ -19,4 +19,4 @@ block content
                             div.col.form-group
                                 button.btn.btn-primary.btn-block.formsinput Login
                             div.col.form-group
-                                a.formsinput(class='button btn btn-outline-secondary btn-block', href='employee/registerfrontdesk') Register
+                                a.formsinput(class='button btn btn-outline-secondary btn-block', href='/signup') Register
