--- a/views/registerFrontDesk.pug
+++ b/views/registerFrontDesk.pug
@@ -1,8 +1,8 @@
-extends layout
+extends layout2
 block content
     header.card-header
-        h4.card-title Register Front Desk Personel 
-    form(method="POST" action='/employee/registerfrontdesk' id = "signup")
+        h4.card-title Register Front Desk Personnel 
+    form(method="POST" action='/signup' id = "signup")
         div.form-row
             div.form-field.col.form-group
                 label First name 
@@ -33,5 +33,10 @@ block content
         div.form-row
             div.col.form-group
                 button.btn.btn-primary.btn-block(type="submit") Register
+        div.form-row
+            div.col
+                h4 Are you already registered?
+            div.col
+                a.links(href='/login') Click here to login
      
                 
