--- a/views/layout.pug
+++ b/views/layout.pug
@@ -16,16 +16,16 @@ html
                     li.nav-item.active
                         a.nav-link(href='#') Home
                     li.nav-item
-                        a.nav-link(href='/services') Services
+                        a.nav-link(href='employeelist') Employee List
                     li.nav-item
-                        a.nav-link(href='/about') About
+                        a.nav-link(href='createEmployee') Register Workers
                     li.nav-item
                         a.nav-link(href='/employees') Employees
                     ul.navbar-nav.float-right
                     li.nav-item
                         a.nav-link(href='/orders') Orders
-                    li.nav-item.dropdown
-                        a.nav-link.dropdown-toggle(id='navbarDropdownMenuLink', data-toggle='dropdown', aria-haspopup='true', aria-expanded='false') Account
+                    li.nav-item
+                        a.nav-link(href='/orders') Financials
                 form.form-inline.my-2.my-lg-0(method="post" action='/logout')
                     button.btn.btn-outline-success.my-2.my-sm-0.formsinput(type="Submit") Log Out
         
