--- a/views/layout.pug
+++ b/views/layout.pug
@@ -2,6 +2,7 @@ doctype html
 html
     head
         link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css")
         link(rel='stylesheet', href='/css/style.css')
         title= title
     nav.navbar.navbar-expand-lg.navbar-light.bg-light.forma.sticky-top
