--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,13 +3,15 @@ html
     head
         link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
         link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css")
+        link(rel="stylesheet", href="https://fonts.google.com/sr?family=Courier+New+OS&token=MT")
         link(rel='stylesheet', href='/css/style.css')
         title= title
     nav.navbar.navbar-expand-lg.navbar-light.bg-light.forma.sticky-top
         div.container
             a.navbar-brand(href='#')
-                img(src = "/images/ee.jpg" width="30" height="30" class="d-inline-block align-top" alt="")
-            a Stay Clean Bins
+                i.bi.bi-eraser-fill
+            a(style = "color:orange;") Stay 
+            a Clean
             button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
                 span.navbar-toggler-icon
             .collapse.navbar-collapse(id='navbarSupportedContent')
@@ -28,7 +30,8 @@ html
                     li.nav-item
                         a.nav-link(href='/orders') Financials
                 form.form-inline.my-2.my-lg-0(method="post" action='/logout')
-                    button.btn.btn-outline-success.my-2.my-sm-0.formsinput(type="Submit") Log Out
+                    button.btn.btn-outline-success.my-2.my-sm-0.formsinput(type="Submit")
+                        i.bi.bi-person-circle   Log Out
         
                 
     body
