--- a/views/layout2.pug
+++ b/views/layout2.pug
@@ -2,13 +2,15 @@ doctype html
 html
     head
         link(rel="stylesheet", href="http://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css")
+        link(rel="stylesheet", href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css")
+        link(rel="stylesheet", href="https://fonts.google.com/sr?family=Courier+New+OS&token=MT")
         link(rel='stylesheet', href='/css/style.css')
         title= title
     nav.navbar.navbar-expand-lg.navbar-light.bg-light.forma.sticky-top
         div.container
             a.navbar-brand(href='#')
-                img(src = "/images/ee.jpg" width="30" height="30" class="d-inline-block align-top" alt="")
-            a Stay Clean Bins 
+                i.bi.bi-eraser-fill
+            a Stay Clean 
             button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
                 span.navbar-toggler-icon
             .collapse.navbar-collapse(id='navbarSupportedContent')
