Able to make order routes

--- a/views/employeeList.pug
+++ b/views/employeeList.pug
@@ -39,8 +39,9 @@ block content
     div.form-row
         div.col.form-group
             a(href='/employee/createEmployee')
-                h1(style="margin-left: 50%; color:black;" )
-                    i.bi.bi-plus-circle-fill  Add Employee
+                button.btn.btn-dark(style="margin-left: 50%;")
+                    h1
+                        i.bi.bi-plus-circle-fill  Add Employee
                     
 
 
