--- a/views/layout.pug
+++ b/views/layout.pug
@@ -19,14 +19,14 @@ html
                     li.nav-item.active
                         a.nav-link(href='#') Home
                     li.nav-item
-                        a.nav-link(href='employeelist') Employee List
+                        a.nav-link(href='/employee/employeelist') Employees
                     li.nav-item
-                        a.nav-link(href='createEmployee') Register Workers
+                        a.nav-link(href='/employee/createEmployee') Register Workers
                     li.nav-item
-                        a.nav-link(href='/employees') Employees
+                        a.nav-link(href='/truck/trucklist') Trucks
                     ul.navbar-nav.float-right
                     li.nav-item
-                        a.nav-link(href='/orders') Orders
+                        a.nav-link(href='/customer/orderlist') Orders
                     li.nav-item
                         a.nav-link(href='/orders') Financials
                 form.form-inline.my-2.my-lg-0(method="post" action='/logout')
