Some changes visually

--- a/views/homepage.pug
+++ b/views/homepage.pug
@@ -1,2 +1,28 @@
 extends layout
 block content
+    div.row
+        div.col-sm-6
+            div.card.text-white.bg-dark.mb-3
+                div.card-body
+                    h5.card-title Orders 
+                    p.card-text You can view all orders at a click of a button 
+                    a.btn.btn-primary.btn-dark.border-primary(style="font-family:Segoe UI;font-style: normal;")
+                        i.bi.bi-plus   Create order 
+        div.col-sm-6
+            div.card.text-white.bg-dark.mb-3
+                div.card-body
+                    h5.card-title Employees 
+                    p.card-text View all employees information here 
+                    a.btn.btn-primary.btn-dark.border-primary(style="font-family:Segoe UI;font-style: normal;")
+                        i.bi.bi-plus   Add employee 
+    div.card.border-warning.text-white.bg-dark.mb-3(style="max-width: 18rem;")
+        div.card-header 
+            div.card-body.text-warning
+                h1.card-title
+                    span 
+                        i.bi.bi-truck 
+                    span 
+                        i.bi.bi-plus
+                    span Truck 
+                p.card-text 
+                
