--- a/views/login.pug
+++ b/views/login.pug
@@ -4,7 +4,7 @@ block content
         div.col-md-6
             div.card.text-center.forma
                 div.card-header
-                        h4.card-title Log In 
+                        h4.card-title LOGIN 
                 div.card-body
                     form(method="POST" action='/login')
                         div.form-row
