--- a/public/css/style.css
+++ b/public/css/style.css
@@ -6,7 +6,7 @@
 body{
   background: linear-gradient(45deg, #49D49D 10%, #A2C7E5 90%);
   height: 100vh;
-  font-size:larger
+  font-size:larger;
 }
 div{
   font-family: "Courier New OS", "Courier New OS", "Courier New OS","Courier New OS";
