--- a/views/layout2.pug
+++ b/views/layout2.pug
@@ -10,7 +10,8 @@ html
         div.container
             a.navbar-brand(href='#')
                 i.bi.bi-eraser-fill
-            a Stay Clean 
+            a(style = "color:orange;") Stay 
+            a Clean 
             button.navbar-toggler(type='button', data-toggle='collapse', data-target='#navbarSupportedContent', aria-controls='navbarSupportedContent', aria-expanded='false', aria-label='Toggle navigation')
                 span.navbar-toggler-icon
             .collapse.navbar-collapse(id='navbarSupportedContent')
